Top menu shift fix

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,5 +1,5 @@
 .TopMenu{
-    margin: 4.9vh 0 0 6.7vw;
+    margin: 4.9vh 0 0 7.7vw;
 }
 
 .SideMenu{
